--- a/index.html
+++ b/index.html
@@ -4,29 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href = "./styles.css" type="text/css" rel="stylesheet" />
-    <script defer scr="game.js"></script>
-    <title>The Adventure Game</title>
+    <link href="styles.css" rel="stylesheet">
+    <script defer src="game.js"></script>
+    <title>Adventure Game</title>
 </head>
 <body>
-    <div class="header" id="header">
-        <h1>Rachel's "Choose Your Adventure" Game</h1>
-    </div>
-    <div class="game">
-        <div class="container">
-            <div id="text">Adventure description</div>
-            <div id="option-buttons" class="btn-grid">
-                <button class="btn">Option 1</button>
-                <button class="btn">Option 2</button>
-                <button class="btn">Option 3</button>
-                <button class="btn">Option 4</button>
-                <button class="btn">Option 5</button>
-                <button class="btn">Option 6</button>
-            </div>
+    <div class="container">
+        <div id="text">Text</div>
+        <div id="option-buttons" class="btn-grid">
+            <button class="btn">Option 1</button>
+            <button class="btn">Option 2</button>
+            <button class="btn">Option 3</button>
+            <button class="btn">Option 4</button>
         </div>
-    </div>
-    <div class="footer" id="footer">
-        (c) 2022 Rachel Bock
-    </div>
+    </div>    
 </body>
 </html>
